
      \item On \samp{aarch64} Linux platforms using GCC,
      \command{configure} now defaults to \option{-fPIC} (instead of
      \option{-fpic}), as desired in \PR{18326}.

      \item \command{configure} now checks conversion of datetimes
      between \code{POSIXlt} and \code{POSIXct} around year 2020.  Failure
      (which has been seen on platforms missing \code{tzdata}) is fatal.
    }
  }

  \subsection{INSTALLATION on WINDOWS}{
    \itemize{
      \item The makefiles and installer scripts for Windows have been
      tailored to \file{Rtools43}, an update of the \file{Rtools42}
      toolchain.  It is based on \command{gcc} 12 and newer versions of
      MinGW-W64, binutils and libraries.  At this time R-devel can still
      be built using Rtools42 without changes, but when R-devel is
      installed via the installer, it will by default look for Rtools43.

      \item Old make targets \code{rsync-extsoft} and 32-bit ones that
      are no longer needed have been removed.

      \item Default builds (including for packages) no longer select
      C99.  Thus the C standard used is the default for the compiler,
      which for the toolchain in \file{Rtools43} is C17.  (This is
      consistent with Unix builds.)
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item The default C++ standard has been changed to C++17 where
      available (which it is on all currently checked platforms): if not
      C++14 or C++11 is used if available otherwise C++ is not supported.

      \item \code{USE_FC_LEN_T} is the default: this uses the
      correct (compiler-dependent) prototypes for Fortran BLAS/LAPACK
      routines called from C/C++, and requires adjustment of many such
      calls -- see \sQuote{Writing R Extensions} §6.6.1.

      %% g++ 11 supported c++23.
      %% 2022-09 Recent LLVM (>= 13?) and Apple (>= 13?) clang support c++2b.
      \item There is initial support for C++23 as several compilers are